# python-metar

./: .gitignore  README.md  get_report.py  lambda_handler.py  parse_metar.py  pyproject.toml  sample.py
metar/: __init__.py  airports.py  analysis.py  fetch.py  format.py  parser.py  slack.py  station.py
test/: test_airports.py  test_direction.py  test_distance.py  test_fetch.py  test_lambda_handler.py  test_metar.py  test_precipitation.py  test_pressure.py  test_slack.py  test_speed.py  test_station.py  test_temperature.py
