[project]
name = "metar"
version = "2.0.1+personal"
description = "Personal fork of python-metar with pilot-friendly extensions."
authors = [
    { name = "Zach Bruno" },
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
packages = ["metar"]

[tool.setuptools.package-data]
metar = ["nsd_cccc.txt", "py.typed"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
